# MindCheck-AI-Capstone

./: .gitignore  README.md  render.yaml
backend/: .env.example  Makefile  pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/ai/: __init__.py  openai_client.py
backend/app/ai/prompts/: __init__.py  sentiment_prompts.py
backend/app/core/: __init__.py  config.py  security.py
backend/app/repositories/: __init__.py  alert_repo.py  journal_repo.py  push_subscription_repo.py  student_repo.py  supabase_client.py
backend/app/routers/: __init__.py  alerts_router.py  journal_router.py  push_router.py  resources_router.py  students_router.py
backend/app/schemas/: __init__.py  journal.py  notifications.py
backend/app/services/: __init__.py  alert_service.py  email_service.py  encryption_service.py  journal_service.py  push_notification_service.py  push_subscription_service.py  student_service.py
backend/scripts/: __init__.py  create_test_student.py  test_email.py  test_jwks_decode.py  test_sentiment_risk.py  test_student_deletion.py  verify_env.py
backend/supabase/migrations/: 001_initial_schema.sql  002_auto_create_student_trigger.sql  003_push_subscriptions.sql
backend/tests/: conftest.py  test_alerts.py  test_encryption.py  test_health.py  test_journal.py  test_resources.py  test_sentiment.py
docs/: Diario_Reflexion_Fase1.docx  MindCheck_AI_Propuesta_Formal.docx  SRS_MindCheck_PWA_Bienestar_Mental.docx (1).md  alcance.md  arquitectura.md  base_de-datos.md  definicion.md
frontend/: .env.example  .gitignore  index.html  (+4 more)
(+67 files in other folders)
